--- a/_decorations.scss
+++ b/_decorations.scss
@@ -1,5 +1,5 @@
 /* ================================
- * !Mixins
+ * !Decorations
  * ================================*/
 
 /*
@@ -59,30 +59,4 @@
 
 	}
 	
-}
-
-/*
- * !Clearfix
- */
-@mixin clearfix() {
-	zoom: 1;
-
-	&:before, &:after {
-		content: '';
-		display: table;
-	}
-
-	&:after {
-		clear: both;
-	}
-
-}
-
-/*
- * !Image replacement
- */
-@mixin ir() {
-	font: 0/0 a;
-	text-shadow: none;
-	color: transparent;
 }
